# c-relational-database

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmakeclean.sh  install.sh  main.c  make.sh  readme.md  todo  valgrind.sh
cmake/: CMakeLists.txt
libraries/: colors.c  colors.h  commands.c  commands.h  list.c  list.h  messages.c  messages.h  struct.c  struct.h  tables.c  tables.h
log/: valgrindLog.txt
source/: colors.h  command.c  messages.c  struct.c  tables.c
src/: Makefile  command.h  list.h  main.c  messages.h
tables/: listOfTables.txt  people.txt
valgrind/: valgrind.sh
